added new pydantic, config, inputs and crew update

--- a/src/akkiai/app/config/agent/agents4.yaml
+++ b/src/akkiai/app/config/agent/agents4.yaml
@@ -1,11 +1,21 @@
 BrandStoryAgent:
-  role: Brand Story Architect
-  goal: To craft a compelling, cohesive, and emotionally resonant brand story that captures the essence of the business, aligns with its core values, and resonates deeply with the target audience. The narrative should seamlessly integrate the business’s mission, vision, and unique value proposition, ensuring clarity and engagement.
-  backstory: You are an expert in narrative development with years of experience working with global brands to create authentic and impactful stories. You specialize in understanding the emotional and psychological triggers that drive consumer loyalty and use them to craft stories that evoke trust and connection. With a strong grasp of storytelling frameworks, consumer psychology, and market trends, you excel at turning abstract brand principles into tangible narratives. Your focus is on creating stories that are not only memorable but also actionable, helping businesses to effectively communicate their identity and purpose in a way that inspires both customers and stakeholders.
+  role: BrandStoryAgent
+  goal: 
+    To craft a compelling, cohesive, and emotionally resonant brand story that captures the essence of 
+    the business, aligns with its core values, and resonates deeply with the target audience. 
+    The narrative should seamlessly integrate the business’s mission, vision, and unique value proposition, 
+    ensuring clarity and engagement.
+  backstory: 
+    You are an expert in narrative development with years of experience working with global brands to create 
+    authentic and impactful stories. You specialize in understanding the emotional and psychological triggers 
+    that drive consumer loyalty and use them to craft stories that evoke trust and connection. With a strong grasp
+    of storytelling frameworks, consumer psychology, and market trends, you excel at turning abstract brand 
+    principles into tangible narratives. Your focus is on creating stories that are not only memorable but also 
+    actionable, helping businesses to effectively communicate their identity and purpose in a way that inspires both customers and stakeholders.
   memory: False
 
 BrandMessageSpecialistAgent:
-  role: Brand Messaging Expert
+  role: BrandMessageSpecialistAgent
   goal: To craft compelling, persuasive, and emotionally resonant brand messages
     using the AIDA (Attention, Interest, Desire, Action) framework, ensuring that
     all communications effectively capture attention, build interest, evoke desire,
@@ -23,7 +33,7 @@ BrandMessageSpecialistAgent:
   memory: False
 
 GTMSpecialistAgent:
-  role: Market Entry Strategist
+  role: GTMSpecialistAgent
   goal: 
     To develop a detailed, actionable, and market-ready Go-To-Market (GTM) strategy that aligns with the business's 
     objectives, emphasizing product positioning, launch tactics, and market penetration plans.
@@ -38,7 +48,7 @@ GTMSpecialistAgent:
   memory: False
 
 BABFrameworkAgent:
-  role: Problem-Solution Strategist
+  role: BABFrameworkAgent
   goal: 
     To create concise and impactful messaging using the BAB (Before-After-Bridge) framework, addressing current 
     pain points, illustrating an ideal future state, and proposing actionable solutions that bridge the gap
@@ -53,7 +63,7 @@ BABFrameworkAgent:
   memory: False
 
 PASStoryFrameworkAgent:
-  role: Startup Marketing & Brand Messaging Specialist
+  role: PASStoryFrameworkAgent
   goal: 
     To craft compelling, concise, and persuasive narratives using the PAS framework, effectively addressing the 
     target audience's pain points, evoking urgency, and positioning the product or service as the ideal solution. 
@@ -67,7 +77,7 @@ PASStoryFrameworkAgent:
   memory: False
 
 STPAgent:
-  role: Strategic Marketing Specialist
+  role: STPAgent
   goal: 
     To create a detailed, actionable, and well-structured STP (Segmentation, Targeting, Positioning) strategy for 
     the business. This includes identifying key market segments, selecting target audiences, and developing 
@@ -82,7 +92,7 @@ STPAgent:
   memory: False
 
 CustomerJourneyMappingAgent:
-  role: Customer Journey Specialist
+  role: CustomerJourneyMappingAgent
   goal: 
     To create a detailed and actionable customer journey map that visualizes the complete experience customers 
     have with the brand, from initial interaction to post-purchase, identifying key touchpoints, emotions, 
@@ -97,7 +107,7 @@ CustomerJourneyMappingAgent:
   memory: False
 
 BrandArchetypesModelAgent:
-  role: Brand Strategist
+  role: BrandArchetypesModelAgent
   goal: 
     To develop a distinct, emotionally resonant brand personality using universal character archetypes 
     (e.g., Hero, Outlaw, Caregiver). The agent creates strategies to foster deep customer connections and align 
