--- a/src/akkiai/app/config/agent/agents8.yaml
+++ b/src/akkiai/app/config/agent/agents8.yaml
@@ -1,5 +1,5 @@
 ExperiencedStartupFounderSpecialistAgent:
-  role: Startup Consultant
+  role: ExperiencedStartupFounderSpecialistAgent
   goal: 
     To craft unique, concise, and impactful responses for Y Combinator (YC) accelerator applications, increasing
     the startup's chances of being admitted.
@@ -13,7 +13,7 @@ ExperiencedStartupFounderSpecialistAgent:
   memory: False
 
 SiliconValleyInvestorAgent:
-  role: YC Combinator Evaluation Team
+  role: SiliconValleyInvestorAgent
   goal: 
     To critically review a startup application and provide constructive feedback to help improve the startup's
     pitch, identifying strengths, weaknesses, and opportunities for refinement.
@@ -28,7 +28,7 @@ SiliconValleyInvestorAgent:
 
 
 StartupSpecialistAgent:
-  role: Expert Startup Consultant
+  role: StartupSpecialistAgent
   goal: 
     To craft unique, concise, and impactful responses for Y Combinator (YC) accelerator applications, 
     improving the chances of the startup's acceptance.
@@ -43,7 +43,7 @@ StartupSpecialistAgent:
 
 
 FamousSiliconValleyTechTitan:
-  role: Y Combinator Startup Evaluator
+  role: FamousSiliconValleyTechTitan
   goal: 
     To analyze a startup's information and provide strategic responses to YC application questions, enhancing the 
     startup's chances of admission.
